Rename replacements to account in config

--- a/test/smoke-browser.html
+++ b/test/smoke-browser.html
@@ -14,7 +14,7 @@
         currency: 'USD',
         timezone: 'America/Whitehorse',
         tag: '#costflow',
-        accountMap: {
+        account: {
             aapl: 'Assets:ETrade:AAPL',
             boc: 'Assets:CN:BOC',
             bofa: 'Assets:US:BofA:Checking',
